<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.FragDial">

    <TextView
        android:id="@+id/txtvwDlFrgNmId"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/str_frag_dial_label"
        android:textSize="18sp"
        android:textColor="@color/colorTxtBlanco"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/txtvwCallWhoId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAppCallId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/str_btn_make_call"
        android:textSize="18sp"
        android:textColor="@color/colorTxtBlanco"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancelDialId"
        app:layout_constraintTop_toBottomOf="@+id/edtxtGetPhoneNumId" />

    <TextView
        android:id="@+id/txtvwCallWhoId"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/str_person_to_call"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorTxtBlanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtvwDlFrgNmId"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtxtGetPhoneNumId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="phone"
        android:textColor="@color/colorTxtBlanco"
        android:paddingBottom="3dp"
        android:paddingTop="10dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwDlFrgNmId" />

    <Button
        android:id="@+id/btnCancelDialId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_background"
        android:text="@string/btn_str_cancelar"
        android:textColor="@color/colorTxtBlanco"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnAppCallId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtGetPhoneNumId" />

</androidx.constraintlayout.widget.ConstraintLayout>